syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "KeymanagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

service KeymanagerGrpcService {
  rpc registra (ChavePixRequest) returns (ChavePixResponse) {}
}

enum TipoDeChave {
  CHAVE_DESCONHECIDA = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoDeConta {
  CONTA_DESCONHECIDA = 0;
  CONTA_POUPANCA = 1;
  CONTA_CORRENTE = 2;
}

message ChavePixRequest {
  string clienteId = 1;
  TipoDeChave tipoDeChave = 2;
  string chave = 3;
  TipoDeConta tipoDeConta = 4;
}

message ChavePixResponse {
  string clienteId = 1;
  string pixId = 2;
}